google sign in API

--- a/client/project/src/app/component/add-transaction/add-transaction.component.html
+++ b/client/project/src/app/component/add-transaction/add-transaction.component.html
@@ -9,6 +9,7 @@
             [showIcon]="true"
             [style]="{ width: '100%' }"
             [inputStyle]="{ width: '100%' }"
+            [showButtonBar]="true"
             formControlName="date"
           ></p-calendar>
         </div>
