--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -58,3 +58,12 @@ th {
 .export-buttons {
   margin-right: 1rem;
 }
+
+.add-transaction {
+  font-family: "Righteous", cursive;
+}
+
+.add-transaction:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+}
