--- a/client/project/src/app/component/savings/savings.component.html
+++ b/client/project/src/app/component/savings/savings.component.html
@@ -489,8 +489,44 @@
           </h3>
         </div>
 
-        <div class="mt-2" id="addTransaction" (click)="newTransaction()">
-          <h4 class="text-decoration-underline">Add transaction</h4>
+        <div class="my-5 d-flex flex-column justify-content-evenly">
+          <div
+            class="mt-2"
+            class="add-transaction mb-3"
+            (click)="op.toggle($event)"
+          >
+            <h5>
+              <fa-icon [icon]="pointRightIcon"></fa-icon>
+              Add Transaction Categories (Toggle 'Expense' button to change
+              category type)
+            </h5>
+            <p-overlayPanel #op>
+              <ng-template pTemplate="content">
+                <h6>Category:</h6>
+                <form [formGroup]="categoryForm">
+                  <input
+                    pInputText
+                    class="p-inputtext-sm"
+                    placeholder="Press 'Enter' to submit"
+                    formControlName="category"
+                    (keypress)="addCategory($event)"
+                  />
+                  <p-toggleButton
+                    formControlName="type"
+                    onLabel="Expense"
+                    offLabel="Income"
+                  ></p-toggleButton>
+                </form>
+              </ng-template>
+            </p-overlayPanel>
+          </div>
+
+          <div class="mt-2" class="add-transaction" (click)="newTransaction()">
+            <h5>
+              <fa-icon [icon]="pointRightIcon"></fa-icon>
+              New Transaction
+            </h5>
+          </div>
         </div>
       </div>
     </div>
