--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
           </ng-template>
           <div>
             <h4>
-              Stocks
+              Investments
               <span class="pi pi-angle-right" style="font-size: 1.5rem"></span>
               <span *ngIf="!skeletonLoading; else loading">
                 {{ stocksValue() | currency }}
@@ -123,8 +123,8 @@
         </form>
       </ng-template>
     </p-overlayPanel>
-    <p-toast></p-toast>
   </div>
+  <p-toast></p-toast>
 </div>
 
 <ng-template #loading>
@@ -155,6 +155,16 @@
         </div>
 
         <div class="my-5 d-flex flex-column justify-content-evenly">
+          <div
+            *ngIf="showAddGoal"
+            class="add-transaction mb-3"
+            (click)="op.toggle($event)"
+          >
+            <h5>
+              <fa-icon [icon]="pointRightIcon"></fa-icon>
+              Set your target amount to achieve this year (i.e. $50,000)
+            </h5>
+          </div>
           <div
             class="add-transaction mb-3"
             [routerLink]="'/investment-dashboard'"
