--- a/client/project/src/app/component/sign-up/sign-up.component.html
+++ b/client/project/src/app/component/sign-up/sign-up.component.html
@@ -225,8 +225,8 @@
             </tr>
             <tr>
               <td>Password:</td>
-              <td>
-                {{ newUser.password }}
+              <td class="user-password" (click)="togglePassword()">
+                {{ newUserPassword }}
               </td>
             </tr>
             <tr *ngIf="showCaptcha">
