--- a/client/project/src/app/component/authentication/authentication.component.html
+++ b/client/project/src/app/component/authentication/authentication.component.html
@@ -59,13 +59,8 @@
               <div
                 class="d-flex justify-content-center align-items-center mt-3"
               >
-                <asl-google-signin-button
-                  type="standard"
-                  theme="filled_black"
-                ></asl-google-signin-button>
                 <p-button
-                  class="ms-3"
-                  styleClass="p-button-outlined"
+                  styleClass="p-button-primary"
                   [disabled]="form.invalid"
                   type="submit"
                 >
@@ -86,7 +81,12 @@
       <div class="col-10">
         <section class="sign-up">
           <div class="d-flex justify-content-center align-items-center">
+            <asl-google-signin-button
+              type="standard"
+              theme="filled_black"
+            ></asl-google-signin-button>
             <p-button
+              class="ms-3"
               type="button"
               styleClass="p-button-help"
               (onClick)="showSignUpDialog()"
