--- a/client/project/src/app/component/transaction-records/transaction-records.component.html
+++ b/client/project/src/app/component/transaction-records/transaction-records.component.html
@@ -396,6 +396,8 @@
     </div>
   </section>
   <p-toast></p-toast>
+  <!-- SCROLL UP BTN -->
+  <p-scrollTop></p-scrollTop>
 </div>
 
 <ng-template #loading>
