--- a/client/project/src/app/app.component.html
+++ b/client/project/src/app/app.component.html
@@ -1,10 +1,12 @@
 <p-menubar *ngIf="isLogin()" [model]="items" id="applicationMenubar">
   <ng-template pTemplate="start" class="mx-2">
     <p-avatar
+      id="user-avatar"
       [image]="imgSrc"
       styleClass="mr-2"
       size="large"
       shape="circle"
+      (click)="showUserDetail()"
     ></p-avatar>
 
     <!-- <img src="/assets/images/puzzle.png" height="30" class="mr-2" /> -->
@@ -17,15 +19,13 @@
   </ng-template>
 
   <ng-template pTemplate="end">
-    <input type="text" pInputText placeholder="Search" class="w-full" />
-    <p-button
-      icon="pi pi-power-off"
-      label="Logout"
-      styleClass=" p-button-text p-button-danger"
-      (onClick)="logout()"
-    ></p-button>
+    <!-- <input type="text" pInputText placeholder="Search" class="w-full" /> -->
+    <div class="application-name fs-2">
+      <p>am<span class="primary">.app</span></p>
+    </div>
   </ng-template>
 </p-menubar>
+<p-confirmDialog [style]="{ width: '50vw' }"></p-confirmDialog>
 
 <!-- am.app -->
 <p-menubar *ngIf="!isLogin()" [model]="items" id="applicationMenubar">
@@ -56,6 +56,68 @@
 </p-menubar>
 
 <router-outlet id="router-outlet"></router-outlet>
+
+<p-sidebar
+  [(visible)]="sidebarVisible"
+  [baseZIndex]="9999"
+  [style]="{ width: '30rem' }"
+>
+  <ng-template pTemplate="header">
+    <h3 class="user-details">
+      {{ currTime }}
+    </h3>
+  </ng-template>
+  <ng-template pTemplate="content">
+    <div
+      class="d-flex flex-column justify-content-center align-items-center user-details mt-5"
+    >
+      <div class="text-center">
+        <p-image
+          [src]="imgSrc"
+          alt="user_profile"
+          [preview]="true"
+          [height]="'100rem'"
+        ></p-image>
+
+        <h1 class="mt-3">Hi {{ userFullname | titlecase }}</h1>
+      </div>
+      <div class="user-summary mt-3">
+        <p class="fs-4">Total Assets: {{ totalValue() | currency }}</p>
+        <p class="fs-4">Investment: {{ stocksValue() | currency }}</p>
+        <p class="fs-4">Savings: {{ savingsValue() | currency }}</p>
+      </div>
+      <div class="router-h3 mt-3">
+        <h3 (click)="showUserSettingDialog()">
+          <fa-icon [icon]="gearIcon"></fa-icon> Setting
+        </h3>
+        <h3 (click)="navigateTo('/investment-dashboard')">
+          <fa-icon [icon]="rightIcon"></fa-icon> Investment
+        </h3>
+        <h3 (click)="navigateTo('/savings')">
+          <fa-icon [icon]="rightIcon"></fa-icon> Savings
+        </h3>
+        <h3 (click)="navigateTo('/mortgage')">
+          <fa-icon [icon]="rightIcon"></fa-icon> Mortgage
+        </h3>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template pTemplate="footer">
+    <div class="d-flex flex-row-reverse justify-content-between">
+      <div>
+        <p-button
+          icon="pi pi-power-off"
+          label="Logout"
+          styleClass=" p-button-text p-button-danger"
+          (onClick)="logoutConfirmation()"
+        ></p-button>
+      </div>
+      <div>
+        <strong>am.app</strong>
+      </div>
+    </div>
+  </ng-template>
+</p-sidebar>
 
 <footer class="mt-5" id="footer">
   <div class="footer">
