--- a/client/project/src/app/component/investment/investment.component.css
+++ b/client/project/src/app/component/investment/investment.component.css
@@ -4,7 +4,8 @@
   border-radius: 10px;
   margin-bottom: 1rem;
   background: rgba(255, 255, 255, 0.13);
-  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  /* box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+   */
   /* backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px); */
 }
