--- a/client/project/src/app/component/savings/savings.component.html
+++ b/client/project/src/app/component/savings/savings.component.html
@@ -469,6 +469,8 @@
     </div>
   </div>
   <p-toast></p-toast>
+  <!-- SCROLL UP BTN -->
+  <p-scrollTop></p-scrollTop>
 </div>
 
 <ng-template #loading>
